# GNCMakeBridge

./: AGENTS.md  README.md  plan.md  pyproject.toml
examples/: convert_examples.py  test_examples.py
examples/cmake_to_gn/: CMakeLists.txt  file_utils.h  main.cc
examples/gn_to_cmake/: BUILD.gn  file_utils.cc  main.cc  string_utils.cc  string_utils.h  utils.cc  utils.h
gncmake_bridge/: __init__.py  __main__.py  cli.py  exceptions.py
gncmake_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gncmake_bridge/config/: __init__.py  config.py
gncmake_bridge/converter/: __init__.py  converter.py
gncmake_bridge/generator/: __init__.py  cmake_generator.py  gn_generator.py
gncmake_bridge/ir/: __init__.py  target.py  template.py  toolchain.py
gncmake_bridge/parser/: __init__.py  cmake_parser.py  gn_parser.py
tests/: test_advanced.py  test_conditionals.py  test_converter.py  test_generator.py  test_parser.py
